@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 aea9eb53c1572316a370861736bd0c2a5bbafd10 ChangeLog
+SHA1 04db654da87bebac2b07cafd294373dcce0ecf6c ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 8c30c7df8f26d877c7ccf84cbd4a6b4fa5b92592 META.yml
-SHA1 8108e8a9e55a5b08da5dd64e3d8d0fb258d64d5c MYMETA.json
-SHA1 40b26e3e7d6821f50e59da12d94e8641a11d08fa MYMETA.yml
-SHA1 1d1c4c75f7df8ad929c0aa4c6671b1b7cf6c4c16 Makefile.PL
+SHA1 ff56967320a068e148ef42582254b1e4d236edc4 META.yml
+SHA1 4f07c8d3fd7504457e29c446eeb2ffe50beedc84 MYMETA.json
+SHA1 7292421f2d933a73656782e0dcac961f0f75dd24 MYMETA.yml
+SHA1 4cffb344ba49490619983f7b01321ea173a3014c Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 a77c88f636bb15a28d5c5ed4def8ed273a59bd59 lib/Net/FullAuto.pm
+SHA1 5a16e9987dc503eecaec58cfffa1cf9aaec8f43e lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,13 +48,13 @@ SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 532a954b8f2f3183851b3381bef60d7d70fa0541 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 5e76b2302c7c092c2e1cebd89696d769e82a52fd lib/Net/FullAuto/FA_Core.pm
+SHA1 8547464f2c2f4b47f088c00c7e9b0c708b3d386d lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlBpw6IACgkQJM3IZYB6aOqT0wCfQvIEPmQ0i0ABqtlH1+dVDBjl
-3TYAnRBX0gJkIGzSLbm1G3Ti18XeC1p+
-=78Yc
+iEYEARECAAYFAlBrUA8ACgkQJM3IZYB6aOok/ACfR18qXWD63uf68gkbd/D20SkP
+bPUAnjRs8KSasO1pWRjqK8eWNiU1zJ0G
+=tvir
 -----END PGP SIGNATURE-----
