@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999926';
+our $VERSION='0.999927';
 
 
 use 5.005;
